# zed-pypackage-context

./: Cargo.toml  extension.toml
src/: lib.rs
